# dlt-daemon

./: .gitignore  CMakeLists.txt  MPL_SOURCE_OFFER.md  OPERATIONS.md  README.md
.github/workflows/: arm-cross-build.yml  cmake-ctest.yml  codeql-analysis.yml  hardening.yml  linux-deps-bootstrap.yml  parser-fuzz.yml  protocol-compat-regression.yml
deploy/fluent-bit/: dlt-json.conf
deploy/systemd/: platform.env
deploy/tls/: stunnel-dlt-forwarder.conf
deploy/vector/: dlt-vector.toml
dlt_lcov_report/: dlt_final_coverage.info  index-sort-f.html  index-sort-l.html  index.html
dlt_lcov_report/console/: dlt-control-common.c.func-c.html  dlt-control-common.c.func.html  dlt-control-common.c.gcov.html  dlt-convert.c.func-c.html  dlt-convert.c.func.html  dlt-convert.c.gcov.html  dlt-receive.c.func-c.html  dlt-receive.c.func.html  dlt-receive.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
dlt_lcov_report/daemon/: dlt-daemon.c.func-c.html  dlt-daemon.c.func.html  dlt-daemon.c.gcov.html  dlt_daemon_client.c.func-c.html  dlt_daemon_client.c.func.html  dlt_daemon_client.c.gcov.html  dlt_daemon_common.c.func-c.html  dlt_daemon_common.c.func.html  dlt_daemon_common.c.gcov.html  dlt_daemon_connection.c.func-c.html  dlt_daemon_connection.c.func.html  dlt_daemon_connection.c.gcov.html  dlt_daemon_event_handler.c.func-c.html  (+20 more)
doc/: dlt.conf.5.md
scripts/: dlt-healthcheck.sh  install-linux-deps.sh  protocol-compat-gate.sh
src/adaptor/: CMakeLists.txt  dlt-adaptor-plugin-runner.sh
src/adaptor/plugins/: README.md  plugins.conf
systemd/: CMakeLists.txt  dlt-platform.service.cmake
tests/: CMakeLists.txt  gtest_dlt_daemon_common.cpp  gtest_dlt_daemon_offline_log.cpp
(+82 files in other folders)
